[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/SceneBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GameScene.gd" type="Script" id=2]
[ext_resource path="res://components/Scoreboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/btn-close-pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btn-close.png" type="Texture" id=5]
[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/img/btn-help_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/img/btn-help.png" type="Texture" id=8]

[node name="GameScene" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -60.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer" index="0"]
margin_right = 944.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "Classroom Tasking"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="1"]
margin_top = 80.0
margin_right = 944.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="0"]
margin_right = 614.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
margin_right = 614.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 11
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer" index="0"]
margin_right = 614.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="TaskButtonGrid" type="HFlowContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer" index="0"]
unique_name_in_owner = true
margin_left = 20.0
margin_right = 594.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="Scoreboard" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 644.0
margin_top = 0.0
margin_right = 944.0
margin_bottom = 420.0
rect_min_size = Vector2( 300, 0 )

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/Control" index="1"]
margin_right = 54.0
margin_bottom = 53.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control" index="2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -12.0

[node name="Spacer" type="Control" parent="CanvasLayer/Control/HBoxContainer2" index="0"]
margin_right = 620.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer2" index="1"]
margin_left = 624.0
margin_right = 1024.0
margin_bottom = 28.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 20
alignment = 1

[node name="ShowHideScoresButton" type="LinkButton" parent="CanvasLayer/Control/HBoxContainer2/HBoxContainer" index="0"]
margin_left = 108.0
margin_right = 143.0
margin_bottom = 28.0
text = "Hide"

[node name="EditTeamsButton" type="LinkButton" parent="CanvasLayer/Control/HBoxContainer2/HBoxContainer" index="1"]
margin_left = 163.0
margin_right = 244.0
margin_bottom = 28.0
text = "Edit Teams"

[node name="HelpButton" type="TextureButton" parent="CanvasLayer/Control/HBoxContainer2/HBoxContainer" index="2"]
margin_left = 264.0
margin_right = 292.0
margin_bottom = 28.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer2/HBoxContainer/ShowHideScoresButton" to="." method="_on_ShowHideScoresButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer2/HBoxContainer/EditTeamsButton" to="." method="_on_EditTeamsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer2/HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
